# HaskList

./: README.md  hasklist.cabal
src/App/: Configuration.hs  ReadTasks.hs  Types.hs
src/HaskList/: Basic.hs
src/HaskList/Data/: TaskRepository.hs
src/HaskList/Domain/: Hask.hs  Task.hs
test/: Main.hs
test/Generator/: Task.hs
test/QC/: Basic.hs
