cabal-version:      3.0
name:               hasklist
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Hayden Lester
maintainer:         github.com/haydenlester
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- exposed-modules:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable hasklist
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    build-depends:
        base ^>=4.17.2.1,
        hasklist
    hs-source-dirs:   app
                      src
    default-language: Haskell2010

test-suite hasklist-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
                      src
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hasklist,
        QuickCheck
