cabal-version:      3.0
name:               hasklist
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Hayden Lester
maintainer:         github.com/haydenlester
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    default-extensions:
      OverloadedStrings
    default-language: Haskell2010
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  HaskList.Domain.Task
    build-depends:    base ^>=4.17.2.1,
                      cron,
                      text,
                      time

executable hasklist
    default-language: Haskell2010
    import:           warnings
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hasklist

test-suite spec
    default-language: Haskell2010
    import:           warnings
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:
        base ^>=4.17.2.1,
        hasklist,
        QuickCheck
