cabal-version:      3.0
name:               hasklist
version:            0.1.0.0
license:            GPL-3.0-only
license-file:       LICENSE
author:             Hayden Lester
maintainer:         github.com/haydenlester
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions:
      OverloadedStrings
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  HaskList.Domain.Task,
                      HaskList.Data.TaskRepository
    build-depends:    base ^>=4.17.2.1,
                      directory,
                      time ==1.12.2

executable hasklist
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        hasklist

test-suite spec
    import:           warnings
    default-language: Haskell2010
    hs-source-dirs:   test
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:
        base ^>=4.17.2.1,
        hasklist,
        QuickCheck
